test/files/neg/bug2144.check
bug2144.scala:2: error: Parameter type in structural refinement may not refer to abstract type defined outside that same refinement
  def foo[A](a: A) = new { def bar(x: A): A = x }
                                      ^
one error found
